# opengl-minecraft

./: CMakeLists.txt  LICENSE.txt  README.md
include/: Camera.hpp  Chunk.hpp  Defines.hpp  Player.hpp  Renderer.hpp  TextureAtlas.hpp  World.hpp
include/OpenGL_support/: ShaderProgram.hpp  VAO.hpp  VBO.hpp  VertexBufferLayout.hpp
shaders/: basic_triangle.frag  basic_triangle.vert
src/: Camera.cpp  Chunk.cpp  Player.cpp  Renderer.cpp  TextureAtlas.cpp  World.cpp  main.cpp
src/OpenGL_support/: ShaderProgram.cpp  VAO.cpp  VBO.cpp  VertexBufferLayout.cpp
